<resources>
    <string name="app_name" translatable="false">에어콕 베이비</string>
    <string name="common_ok">확인</string>
    <string name="common_cancel">취소</string>
    <string name="common_delete">삭제</string>
    <string name="common_save">저장</string>
    <string name="common_good">좋음</string>
    <string name="common_bad">나쁨</string>
    <string name="common_dust">초미세먼지(PM2.5) 지수</string>
    <string name="common_dust_measure">초미세먼지(PM2.5) 측정값</string>
    <string name="common_dust_info">본 초미세먼지(PM2.5)데이터는 한국환경공단에서 제공하며\n현지사정에 따라 차이가 발생할 수 있습니다.</string>
    <string name="common_current_location">현재위치</string>
    <string name="common_interest">관심지역</string>
    <string name="common_out">실외</string>
    <string name="common_in">실내</string>
    <string name="common_device_con">기기연결하기</string>
    <string name="common_app_close">"\'뒤로\'버튼을 한번 더 누르시면 종료됩니다."</string>
    <string name="common_not_device_message">설정에서 기기를 연결하세요.</string>
    <string name="common_birth">내아이 생년월일(ex. 19800101)</string>
    <string name="common_mom">엄마</string>
    <string name="common_baby">아기</string>
    <string name="dust_state_0">좋음</string>
    <string name="dust_state_1">보통</string>
    <string name="dust_state_2">영유아 영향</string>
    <string name="dust_state_3">나쁨</string>
    <string name="dust_state_4">매우 나쁨</string>
    <string name="dust_state1_0">좋음</string>
    <string name="dust_state1_1">보통</string>
    <string name="dust_state1_2">영유아\n영향</string>
    <string name="dust_state1_3">나쁨</string>
    <string name="dust_state1_4">매우\n나쁨</string>
    <string name="network_alert_title_error">오류 알림.</string>
    <string name="network_alert_message_error">네트워크 통신중 오류가 발생하였습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="net_progress_message">잠시만 기다려주세요.</string>
    <string name="alert_permission_title">권한 설정</string>
    <string name="alert_permission_message">위치권한 설정이 꺼져있습니다.\n에어콕 베이비 서비스 이용이 가능하도록 설정을 변경하시겠습니까?</string>
    <string name="alert_location_title">위치정보 설정</string>
    <string name="alert_location_message">위치정보 기능이 꺼져있습니다.\n에어콕 베이비 서비스 이용이 가능하도록 설정을 변경하시겠습니까?</string>
    <string name="alert_ble_title">블루투스 설정</string>
    <string name="alert_ble_message">블루투스 기능이 꺼져있습니다.\n에어콕 베이비 서비스 이용이 가능하도록 설정을 변경하시겠습니까?</string>
    <string name="alert_location_delete_title">관심지역 삭제</string>
    <string name="alert_location_delete_message">현재 설정된 관심지역을 삭제하시겠습니까?</string>
    <string name="alert_app_update_message">새로운 버전의 앱이 업데이트 되었습니다.\n더욱 원활한 서비스 제공을 위한 업데이트를 진행하세요.</string>
    <string name="location_search_title">관심지역 설정</string>
    <string name="location_search_edit_hint">동이름을 입력해 주세요.</string>
    <string name="select_location_title">지역선택</string>
    <string name="menu_title0">제품설명</string>
    <string name="menu_title1">초미세먼지지수?</string>
    <string name="menu_title1_1">내아이지수(초미세먼지지수)?</string>
    <string name="menu_title2">구매하기</string>
    <string name="menu_title3">환경설정</string>
    <string name="menu_title3_1">기기연결</string>
    <string name="menu_title4">개인정보취급방침</string>
    <string name="dust_info_title">내아이지수(초미세먼지지수) 소개</string>
    <string name="dust_info_des">실시간 측정되는 초미세먼지(PM2.5)값을 활용한 3세 미만의 영유아 맞춤형 환경-건강 영향 평가 지수 (i-EHS 지수)\n0에서 100 사이의 값을 가지며, 5단계 등급으로 구분됨</string>
    <string name="dust_info_state_title0">좋음 (0 ~ 20)</string>
    <string name="dust_info_state_title1">보통 (21 ~ 40)</string>
    <string name="dust_info_state_title2">영유아영향 (41 ~ 60)</string>
    <string name="dust_info_state_title3">나쁨 (61 ~ 80)</string>
    <string name="dust_info_state_title4">매우나쁨 (81 ~ 100)</string>
    <string name="dust_info_state_des0">매우 쾌적한 상태 신생아, 유아에게 영향이 없는 매우 좋은 수준</string>
    <string name="dust_info_state_des1">쾌적한 상태 신생아 일부 영향을 줄 수 있는 수준, 유아에게 영향이 없는 좋은 수준</string>
    <string name="dust_info_state_des2">불쾌감이 없는 상태 신생아에게 영향을 줄 수 있는 수준, 미세먼지로 인하여 일부 유아에게는 경미한 영향을 줄 수준</string>
    <string name="dust_info_state_des3">일부 불쾌감을 줄 수 있는 상태 미세먼지로 인하여 유아에게 건강상 악영향을 줄 수 있는 수준</string>
    <string name="dust_info_state_des4">불쾌감을 주는 상태 미세먼지로 인하여 심각한 악영향을 줄 수 있는 수준</string>
    <string name="dust_info_be_title">행동대응요령</string>
    <string name="dust_info_be_des0">1. 월령별 가중치 부여에 따른 특화된 면역력 예방 정보 제공</string>
    <string name="dust_info_be_des1">2. 실제 육아에 도움이 될 수 있는 실내외 각각의 맞춤형 행동대응요령 제공</string>
    <string name="dust_info_title1">좋음</string>
    <string name="dust_info_title2">보통</string>
    <string name="dust_info_title3">영유아영향</string>
    <string name="dust_info_title4">나쁨</string>
    <string name="dust_info_title5">매우나쁨</string>
    <string name="dust_info_inside">실내</string>
    <string name="dust_info_outside">실외</string>
    <string name="dust_info_action_tips0">쾌적한 환경</string>
    <string name="dust_info_action_tips1">아이가 생활하기에 쾌적한 환경</string>
    <string name="dust_info_action_tips2">실외 활동 권장</string>
    <string name="dust_info_action_tips3">아이와 함께 실외 활동 하는 것을 권장</string>
    <string name="dust_info_action_tips4">안전한 환경</string>
    <string name="dust_info_action_tips5">아이가 생활하기에 안전한 환경</string>
    <string name="dust_info_action_tips6">실외 활동 안전</string>
    <string name="dust_info_action_tips7">아이와 함께 실외 활동을 해도 안전</string>
    <string name="dust_info_action_tips8">환기를 통한 미세먼지 제거</string>
    <string name="dust_info_action_tips9">오염된 실내 공기를 실외로 배출하고 쾌적한 실외 공기를\n실내로 유입시킴으로써 실내의 초미세먼지 농도를\n저감한다.</string>
    <string name="dust_info_action_tips10">공기청정기를 활용한 미세먼지 저감</string>
    <string name="dust_info_action_tips11">공기청정기는 실내 미세먼지를 제거하는 데 가장\n효과적인 방법 중 하나이다. 실내 초미세먼지 오염물질을\n제거하기 위하여 초미세먼지 제거 가능한 필터가 내장된\n공기청정기를 활용한다. (공기청정기 약모드 작동)</string>
    <string name="dust_info_action_tips12">환기장치를 활용한 미세먼지 제거</string>
    <string name="dust_info_action_tips13">환기장치 약 모드 작동</string>
    <string name="dust_info_action_tips14">미세먼지로 인한 호흡기 질환을 예방하는데\n도움을 주는 음식</string>
    <string name="dust_info_action_tips15">- 물을 천천히, 자주 마시기\n: 충분한 수분 섭취는 기관지 점막의 습도를 유지시켜\n유해물질의 침투 방지\n- 배즙: 기관지 질환에 효과\n- 모과: 아미그달린 성분, 가래, 천식, 폐렴 등 기관지염에 효과\n- 생강차: 기침과 가래를 완화시키는 효과\n- 섬유질 많은 채소와 과일\n- 미나리, 냉이: 비타민과 무기질이 풍부해 혈액을 맑게\n해줄 뿐 아니라 미세먼지 속 유해물질을 몸 밖으로 배출해\n주는 효능\n- 더덕, 인삼, 콩, 마늘: 면역력 향상, 체내 노폐물을 제거하는\n역할을 하는 사포닌 성분이 풍부\n- 미역, 다시마 등 해조류: 알긴산이라는 끈끈한 섬유질이\n체내에 쌓인 노폐물을 흡착시켜 몸 밖으로 배출하는 역할,\n독소 배출과 혈액순환에 도움이 되는 칼륨, 비타민 K 풍부</string>
    <string name="dust_info_action_tips16">장시간 또는 무리한 활동 자제</string>
    <string name="dust_info_action_tips17">외출시 유모차 덮게 활용</string>
    <string name="dust_info_action_tips18">미세먼지로 인한 호흡기 질환을 예방하는데\n도움을 주는 음식</string>
    <string name="dust_info_action_tips19">- 물을 천천히, 자주 마시기\n: 충분한 수분 섭취는 기관지 점막의 습도를 유지시켜\n유해물질의 침투 방지\n- 배즙: 기관지 질환에 효과\n- 모과: 아미그달린 성분, 가래, 천식, 폐렴 등 기관지염에 효과\n- 생강차: 기침과 가래를 완화시키는 효과\n- 섬유질 많은 채소와 과일\n- 미나리, 냉이: 비타민과 무기질이 풍부해 혈액을 맑게\n해줄 뿐 아니라 미세먼지 속 유해물질을 몸 밖으로 배출해\n주는 효능\n- 더덕, 인삼, 콩, 마늘: 면역력 향상, 체내 노폐물을 제거하는\n역할을 하는 사포닌 성분이 풍부\n- 미역, 다시마 등 해조류: 알긴산이라는 끈끈한 섬유질이\n체내에 쌓인 노폐물을 흡착시켜 몸 밖으로 배출하는 역할,\n독소 배출과 혈액순환에 도움이 되는 칼륨, 비타민 K 풍부</string>
    <string name="dust_info_action_tips20">환기를 통한 미세먼지 제거</string>
    <string name="dust_info_action_tips21">오염된 실내 공기를 실외로 배출하고\n쾌적한 실외 공기를 실내로 유입시킴으로써 실내의\n초미세먼지 농도를 저감한다.</string>
    <string name="dust_info_action_tips22">장공기청정기를 활용한 미세먼지 저감</string>
    <string name="dust_info_action_tips23">- 공기청정기 중 또는 강 모드 작동\n- 오염물질 발생원 도출 및 제거 권고</string>
    <string name="dust_info_action_tips24">환기장치를 활용 미세먼지 제거</string>
    <string name="dust_info_action_tips25">환기장치 중 모드 작동</string>
    <string name="dust_info_action_tips26">가습을 활용하여 미세먼지 저감</string>
    <string name="dust_info_action_tips27">미세먼지의 흡착 성질을 이용하여 분무기 또는 가습기를\n활용하여 공기 중 물방울을 살포 시 미세먼지는 물방울에\n흡수되어 바닥으로 하강된다. </string>
    <string name="dust_info_action_tips28">물걸레 청소 및 적재되어 있는 미세먼지 제거</string>
    <string name="dust_info_action_tips29">바닥 또는 먼지가 쌓이는 장소를 물걸레 청소를 하여\n공기 중 미세먼지 발생원 제거는 물론 이차 비상을\n차단할 수 있다. </string>
    <string name="dust_info_action_tips30">미세먼지로 인한 호흡기 질환을 예방하는데\n도움을 주는 음식</string>
    <string name="dust_info_action_tips31">- 물을 천천히, 자주 마시기\n: 충분한 수분 섭취는 기관지 점막의 습도를 유지시켜\n유해물질의 침투 방지\n- 배즙: 기관지 질환에 효과\n- 모과: 아미그달린 성분, 가래, 천식, 폐렴 등 기관지염에 효과\n- 생강차: 기침과 가래를 완화시키는 효과\n- 섬유질 많은 채소와 과일\n- 미나리, 냉이: 비타민과 무기질이 풍부해 혈액을 맑게\n해줄 뿐 아니라 미세먼지 속 유해물질을 몸 밖으로 배출해\n주는 효능\n- 더덕, 인삼, 콩, 마늘: 면역력 향상, 체내 노폐물을 제거하는\n역할을 하는 사포닌 성분이 풍부\n- 미역, 다시마 등 해조류: 알긴산이라는 끈끈한 섬유질이\n체내에 쌓인 노폐물을 흡착시켜 몸 밖으로 배출하는 역할,\n독소 배출과 혈액순환에 도움이 되는 칼륨, 비타민 K 풍부</string>
    <string name="dust_info_action_tips32">실외로 노출 최소화, 야외활동을 자제</string>
    <string name="dust_info_action_tips33">외출 시 유모차 덮개 활용</string>
    <string name="dust_info_action_tips34">황사방지용 마스크 사용</string>
    <string name="dust_info_action_tips36">긴팔 등 착용</string>
    <string name="dust_info_action_tips37">- 외출 후 입, 코 주변, 손과 발을 깨끗이 씻어 청결 유지\n- 착용한 의복에 미세먼지가 남아있을 수 있으므로\n반드시 세탁</string>
    <string name="dust_info_action_tips38">미세먼지로 인한 호흡기 질환을 예방하는데\n도움을 주는 음식</string>
    <string name="dust_info_action_tips39">- 물을 천천히, 자주 마시기\n: 충분한 수분 섭취는 기관지 점막의 습도를 유지시켜\n유해물질의 침투 방지\n- 배즙: 기관지 질환에 효과\n- 모과: 아미그달린 성분, 가래, 천식, 폐렴 등 기관지염에 효과\n- 생강차: 기침과 가래를 완화시키는 효과\n- 섬유질 많은 채소와 과일\n- 미나리, 냉이: 비타민과 무기질이 풍부해 혈액을 맑게\n해줄 뿐 아니라 미세먼지 속 유해물질을 몸 밖으로 배출해\n주는 효능\n- 더덕, 인삼, 콩, 마늘: 면역력 향상, 체내 노폐물을 제거하는\n역할을 하는 사포닌 성분이 풍부\n- 미역, 다시마 등 해조류: 알긴산이라는 끈끈한 섬유질이\n체내에 쌓인 노폐물을 흡착시켜 몸 밖으로 배출하는 역할,\n독소 배출과 혈액순환에 도움이 되는 칼륨, 비타민 K 풍부</string>
    <string name="dust_info_action_tips40">환기를 통한 미세먼지 제거</string>
    <string name="dust_info_action_tips41">오염된 실내 공기를 실외로 배출하고\n쾌적한 실외 공기를 실내로 유입시킴으로써 실내의\n초미세먼지 농도를 저감한다.</string>
    <string name="dust_info_action_tips42">공기청정기를 활용한 미세먼지 저감</string>
    <string name="dust_info_action_tips43">- 공기청정기 중 또는 강 모드 작동\n오염물질 발생원 도출 및 제거 권고</string>
    <string name="dust_info_action_tips44">환기장치를 활용 미세먼지 제거</string>
    <string name="dust_info_action_tips45">환기장치 강 모드 작동</string>
    <string name="dust_info_action_tips46">가습을 활용하여 미세먼지 저감</string>
    <string name="dust_info_action_tips47">미세먼지의 흡착 성질을 이용하여 분무기 또는 가습기를\n활용하여 공기 중 물방울을 살포 시 미세먼지는 물방울에\n흡수되어 바닥으로 하강된다. </string>
    <string name="dust_info_action_tips48">물걸레 청소 및 적재되어 있는 미세먼지 제거</string>
    <string name="dust_info_action_tips49">바닥 또는 먼지가 쌓이는 장소를 물걸레 청소를 하여\n공기 중 미세먼지 발생원 제거는 물론 이차 비상을\n차단할 수 있다. </string>
    <string name="dust_info_action_tips50">미세먼지로 인한 호흡기 질환을 예방하는데\n도움을 주는 음식</string>
    <string name="dust_info_action_tips51">- 물을 천천히, 자주 마시기\n: 충분한 수분 섭취는 기관지 점막의 습도를 유지시켜\n유해물질의 침투 방지\n- 배즙: 기관지 질환에 효과\n- 모과: 아미그달린 성분, 가래, 천식, 폐렴 등 기관지염에 효과\n- 생강차: 기침과 가래를 완화시키는 효과\n- 섬유질 많은 채소와 과일\n- 미나리, 냉이: 비타민과 무기질이 풍부해 혈액을 맑게\n해줄 뿐 아니라 미세먼지 속 유해물질을 몸 밖으로 배출해\n주는 효능\n- 더덕, 인삼, 콩, 마늘: 면역력 향상, 체내 노폐물을 제거하는\n역할을 하는 사포닌 성분이 풍부\n- 미역, 다시마 등 해조류: 알긴산이라는 끈끈한 섬유질이\n체내에 쌓인 노폐물을 흡착시켜 몸 밖으로 배출하는 역할,\n독소 배출과 혈액순환에 도움이 되는 칼륨, 비타민 K 풍부</string>
    <string name="dust_info_action_tips52">실외 활동 금지</string>
    <string name="dust_info_action_tips53">아이와 함께 실외활동 하는 것을 금지\n실내로 신속하게 이동 </string>
    <string name="dust_info_action_tips54">황사방지용 마스크 사용</string>
    <string name="dust_info_action_tips56">긴팔 등 착용</string>
    <string name="dust_info_action_tips57">- 외출 후 입, 코 주변, 손과 발을 깨끗이 씻어 청결 유지\n- 착용한 의복에 미세먼지가 남아있을 수 있으므로\n반드시 세탁</string>
    <string name="terms_text1">1. 개인정보의 처리 목적</string>
    <string name="terms_text2">2. 개인정보처리 위탁</string>
    <string name="terms_text3">3. 정보주체의 권리,의무 및 그 행사방법 이용자는 개인정보주체로서 다음과 같은 권리를 행사할 수 있습니다.</string>
    <string name="terms_text4">4. 처리하는 개인정보의 항목 작성</string>
    <string name="terms_text5">5. 개인정보의 파기</string>
    <string name="terms_text6">6. 개인정보의 안전성 확보 조치</string>
    <string name="terms_text7">7. 개인정보 보호책임자 작성</string>
    <string name="terms_text8">8. 개인정보 처리방침 변경</string>
    <string name="setting_cell5">아이 정보</string>
    <string name="setting_cell6">건강기록</string>
    <string name="setting_device_search">연결가능기기검색</string>
    <string name="setting_device_not_desc0">연결 가능한 에어콕 베이비 기기가 없습니다.</string>
    <string name="setting_device_not_desc1">에어콕 베이비 기기를 구매하셨다면\n간단한 등록 절차를 거쳐\n앱과 연결해 사용이 가능합니다.</string>
    <string name="setting_device_desc0">연결 가능한 에어콕 기기</string>
</resources>