<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_default">


    <include
        android:id="@+id/layout_header"
        layout="@layout/family_view_header"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                android:background="#f9f9f9">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_setting_info"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5.3dp"
                    android:text="@string/menu_title5"
                    android:textSize="14.7dp"
                    android:textColor="#666666"/>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#eeeeee"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="#ffffff">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17.3dp"
                    android:layout_marginLeft="18.7dp"
                    android:layout_marginRight="18.7dp"
                    android:textSize="14dp"
                    android:textColor="#5a5a5a"
                    android:text="@string/terms_text1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17.3dp"
                    android:layout_marginLeft="18.7dp"
                    android:layout_marginRight="18.7dp"
                    android:textSize="14dp"
                    android:textColor="#5a5a5a"
                    android:text="@string/terms_text2"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17.3dp"
                    android:layout_marginLeft="18.7dp"
                    android:layout_marginRight="18.7dp"
                    android:textSize="14dp"
                    android:textColor="#5a5a5a"
                    android:text="@string/terms_text3"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17.3dp"
                    android:layout_marginLeft="18.7dp"
                    android:layout_marginRight="18.7dp"
                    android:textSize="14dp"
                    android:textColor="#5a5a5a"
                    android:text="@string/terms_text4"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17.3dp"
                    android:layout_marginLeft="18.7dp"
                    android:layout_marginRight="18.7dp"
                    android:textSize="14dp"
                    android:textColor="#5a5a5a"
                    android:text="@string/terms_text5"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17.3dp"
                    android:layout_marginLeft="18.7dp"
                    android:layout_marginRight="18.7dp"
                    android:textSize="14dp"
                    android:textColor="#5a5a5a"
                    android:text="@string/terms_text6"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17.3dp"
                    android:layout_marginLeft="18.7dp"
                    android:layout_marginRight="18.7dp"
                    android:textSize="14dp"
                    android:textColor="#5a5a5a"
                    android:text="@string/terms_text7"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17.3dp"
                    android:layout_marginLeft="18.7dp"
                    android:layout_marginRight="18.7dp"
                    android:layout_marginBottom="17.3dp"
                    android:textSize="14dp"
                    android:textColor="#5a5a5a"
                    android:text="@string/terms_text8"/>
            </LinearLayout>

            <LinearLayout
                android:visibility="visible"
                android:id="@+id/signup_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-18dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="#ffffff"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="13dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/btn_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_check_n"/>

                    <TextView
                        android:layout_toRightOf="@id/btn_check"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/terams_text9"/>
                </RelativeLayout>

                <Button
                    android:id="@+id/btn_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:onClick="onClick"
                    android:gravity="center"
                    android:background="@drawable/btn_member_bg"
                    android:text="@string/common_ok"
                    android:textColor="#ffffff"
                    android:textSize="18dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>