<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:gravity="center_horizontal"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:src="@drawable/icon_device_none"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp">

        <LinearLayout
            android:id="@+id/layout_not_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14dp"
                android:textColor="#17bbff"
                android:text="@string/setting_device_not_desc0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:layout_marginBottom="65dp"
                android:gravity="center"
                android:textSize="14dp"
                android:textColor="#4b4d4e"
                android:text="@string/setting_device_not_desc1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14dp"
                android:textColor="#4b4d4e"
                android:text="@string/setting_device_desc0"/>

            <ListView
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:listSelector="@android:color/transparent"
                android:divider="@android:color/transparent"
                android:dividerHeight="0dp"
                android:cacheColorHint="@android:color/transparent"
                />
        </LinearLayout>

    </FrameLayout>

    <Button
        android:id="@+id/btn_device_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="52dp"
        android:layout_marginBottom="15dp"
        android:singleLine="true"
        android:textSize="18dp"
        android:textColor="#ffffff"
        android:text="@string/setting_device_search"
        android:background="@drawable/btn_blue_selector"
        />

</LinearLayout>