<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@android:color/transparent"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textSize="18dp"
        android:textColor="#99000000"
        android:text="@string/common_dust"
        />
    <TextView
        android:id="@+id/tv_main_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:singleLine="true"
        android:textSize="14dp"
        android:textColor="#ffffff"
        android:text=""
        android:drawableLeft="@drawable/ic_position"
        android:visibility="invisible"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="12dp"
            android:textColor="#ffffff"
            android:text="@string/common_good"
            />
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/tv_main_dust_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:textSize="100dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="20"
                android:visibility="invisible"
                />
            <Button
                android:id="@+id/btn_main_device_con"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="true"
                android:textSize="12.7dp"
                android:textColor="#17aed9"
                android:text="@string/common_device_con"
                android:background="@drawable/btn_connect_n"
                android:visibility="invisible"
                />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="12dp"
            android:textColor="#ffffff"
            android:text="@string/common_bad"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_main_dust_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textSize="21.3dp"
        android:textColor="#ffffff"
        android:text="좋음"
        />
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-65dp"
        >
        <com.baby.aircok.acbaby.common.widget.CXSeekBar
            android:id="@+id/seekbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/seekbar"
            android:padding="20dp"
            />
    </FrameLayout>


</LinearLayout>