<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@android:color/transparent"
    >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#ffffff"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/splash_logo"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeeeee"/>

        <Button
            android:id="@+id/btn_menu0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textSize="15dp"
            android:textColor="#3e3f40"
            android:text="@string/menu_title0"
            android:drawableLeft="@drawable/icon_side_0_1_selector"
            android:drawablePadding="10dp"
            android:background="@android:color/transparent"
            android:visibility="gone"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeeeee"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_menu1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textSize="15dp"
            android:textColor="#3e3f40"
            android:text="@string/menu_title1"
            android:drawableLeft="@drawable/icon_side_0_2_n"
            android:drawablePadding="10dp"
            android:background="@android:color/transparent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeeeee"/>

        <Button
            android:id="@+id/btn_menu2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textSize="15dp"
            android:textColor="#3e3f40"
            android:text="@string/setting_cell5"
            android:drawableLeft="@drawable/ic_setting_baby"
            android:drawablePadding="10dp"
            android:background="@android:color/transparent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeeeee"/>

        <Button
            android:id="@+id/btn_menu3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textSize="15dp"
            android:textColor="#3e3f40"
            android:text="@string/setting_cell6"
            android:drawableLeft="@drawable/ic_setting_health"
            android:drawablePadding="10dp"
            android:background="@android:color/transparent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeeeee"/>

        <Button
            android:id="@+id/btn_menu4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textSize="15dp"
            android:textColor="#3e3f40"
            android:text="@string/menu_title3"
            android:drawableLeft="@drawable/icon_side_0_4_n"
            android:drawablePadding="10dp"
            android:background="@android:color/transparent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeeeee"/>

    </LinearLayout>
    
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <ImageButton
            android:id="@+id/btn_menu_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="9dp"
            android:background="@android:color/transparent"
            android:src="@drawable/btn_nav_side_close"
            />
    </FrameLayout>




</LinearLayout>